This file documents the revision history for Perl extension Catalyst.

4.32  xxx
        - added optional arguments to Catalyst::Log methods (Andrew Ford)

4.32  Tue Mar 22 02:10:00 2005
        - made a damn typo *AAAAAAAAAAAAAAHHHH!!!*

4.31  Tue Mar 22 02:00:00 2005
        - fixed inheritance (Christian Hansen)
        - previous release was borked!
          fixed that, but you have to regenerate the scripts again :(

4.30  Mon Mar 21 23:00:00 2005
        - more documentation (Andrew Ford)
        - added connection informations (Christian Hansen)
        - HTTP::Request support in Catalyst::Test (Christian Hansen)
        - moved cgi.pl to nph-cgi.pl
        - added Catalyst::Engine::Server (Christian Hansen)
        - removed Catalyst::Test::server
        - updated helper scripts
          IMPORTANT: note that you have to regenerate script/server.pl,
          script/cgi-server.pl and script/cgi.pl (now nph-cgi.pl)

4.28  Sat Mar 19 22:00:00 2005
        - fixed isa tree (Christian Hansen)
        - added script/cgi-server.pl, so no more server restarting after
          code changes
        - reworked documentation (Andrew Ford <A.Ford@ford-mason.co.uk>)

4.27  Sat Mar 19 01:00:00 2005
        - debug message for parameters
        - Fix redirects (Christian Hansen <ch@ngmedia.com>)
        - some random fixes
        - new helper api for Catalyst::Helper::* support
          you have to update script/create.pl to use it

4.26  Wed Mar 16 10:00:00 2005
        - fixed the weird bug that caused regex actions to fail on every
          second request
        - more debug messages
        - 100% pod coverage.

4.25  Sat Mar 12 18:00:00 2005
        - correct perl pathes for helper generated scripts (Tatsuhiko Miyagawa)
        - improved cgi engine docs (Christoper Hicks)

4.24  Sat Mar 12 01:00:00 2005
        - updated cookbook example  
        - fixed base for apache and https (Andrew Ruthven)
        
4.23  Wed Mar 09 20:00:00 2005