@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
 4.32  xxx
+        - documented the log() accessor method in Catalyst (Andrew Ford)
         - added optional arguments to Catalyst::Log methods (Andrew Ford)
 
 4.32  Tue Mar 22 02:10:00 2005
